# LogNinja

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  setup.py  teste.py
.github/workflows/: publish-to-pypi.yml  ruff-lint.yml
docs/: consoles.md  formatters.md  getting-started.md  index.md
docs/code-api/: log-execution.md
examples/: example.py  example_2.py  json_example.py  rich_example.py  run_logs.py  simple_example.py
loggersetup/: __init__.py
logmancer/: __init__.py  console_formatter.py  json_formatter.py  uvicorn_logger_name_filter.py
logninja/: __init__.py  configs.py  console_formatter.py  console_interface.py  contextvars_filter.py  decorators.py  dynaconf_setup.py  format_filter.py  json_formatter.py  logger.py  ninja_console.py  ninja_formatter.py  ninja_handler.py  ninja_json_formatter.py  ninja_rich_console.py  ninja_rich_formatter.py  ninja_rich_handler.py  options.py  traceback.py  utils.py
logninja/asgi/: middleware.py
logninja/fastapi/: middlewares.py
tests/: test_json_formatter.py
