[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "logninja"
version = "0.1.15"
authors = [{ name = "Pedro Cantidio", email = "ppcantidio@gmail.com" }]
description = "A log configuration library for Python projects."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/ppcantidio/logninja.py"

[project.optional-dependencies]
starlette = ["starlette>=0.37.2,<0.38.0"]
ninja = ["rich>=13.7.1"]
